update chapitre and lecon controller
